--- a/03-kv-aware-routing.ipynb
+++ b/03-kv-aware-routing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "77469ba9",
+   "id": "c4b8f6e6",
    "metadata": {},
    "source": [
     "# Lab 3: KV-Aware Routing with Data-Parallel Workers\n",
@@ -134,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ec7f3b6",
+   "id": "379f60b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e49d5dca",
+   "id": "e6a67ae9",
    "metadata": {},
    "source": [
     "### Step 2: Install NATS with JetStream\n",
@@ -160,7 +160,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9eca3aa8",
+   "id": "a6bbac9a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "051ba5ba",
+   "id": "7017491f",
    "metadata": {},
    "source": [
     "### Step 3: Verify NATS Deployment"
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28722b6c",
+   "id": "5a705848",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6678c129",
+   "id": "1bc6e07b",
    "metadata": {},
    "source": [
     "### Step 4: Test NATS Connectivity (Optional)"
@@ -240,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bc8ec0e",
+   "id": "c5e9326a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aab3e11f",
+   "id": "b977cbd0",
    "metadata": {},
    "source": [
     "---\n",
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b04753cd",
+   "id": "3c85f44c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,7 +332,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c1a85d9",
+   "id": "b894744e",
    "metadata": {},
    "source": [
     "---\n",
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcd16805",
+   "id": "a7c3bce5",
    "metadata": {},
    "source": [
     "### Step 1: Check Current GPU Usage"
@@ -351,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "58ee914f",
+   "id": "7cda0adf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d519241",
+   "id": "28659aac",
    "metadata": {},
    "source": [
     "### Step 2: Delete Lab 1 Deployment (If Still Running)\n",
@@ -390,7 +390,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4d2de746",
+   "id": "15fc19d7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95e24862",
+   "id": "b4e10b8b",
    "metadata": {},
    "source": [
     "### Step 3: Verify GPUs Are Available\n",
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "607e69e8",
+   "id": "1d387398",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -446,7 +446,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4fbc1064",
+   "id": "8ddf5968",
    "metadata": {},
    "source": [
     "---\n",
@@ -461,7 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2154ca8",
+   "id": "09251e27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "111558f1",
+   "id": "0dc3ea6e",
    "metadata": {},
    "source": [
     "**Key Configuration Flags:**\n",
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "adb42f8d",
+   "id": "70cba69f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9ed0f25",
+   "id": "3e0acf65",
    "metadata": {},
    "source": [
     "### Step 3: Wait for Deployment"
@@ -612,7 +612,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "097e398d",
+   "id": "e861f238",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -642,7 +642,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6d72964e",
+   "id": "f5936d34",
    "metadata": {},
    "source": [
     "### Step 4: Test Basic Inference"
@@ -651,7 +651,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b0b02383",
+   "id": "15346168",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7bb397d0",
+   "id": "fcf6d4d2",
    "metadata": {},
    "source": [
     "---\n",
@@ -691,7 +691,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "52c2fc92",
+   "id": "e6ba4e64",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3679e0f4",
+   "id": "cc8a493a",
    "metadata": {},
    "source": [
     "**Note on Measuring Cache Benefits**:\n",
@@ -748,144 +748,158 @@
     "\n",
     "For this workshop with 2 GPUs and a 1.5B model, KV-aware routing is **working correctly** (NATS connected, router in KV mode, cache enabled), but timing improvements are too small to measure with `curl`.\n",
     "\n",
-    "### Step 2: Check Cache Behavior\n",
+    "### Step 2: Visualize KV-Aware Routing in Action\n",
     "\n",
-    "**Note**: vLLM's detailed cache logs (hit/miss rates) are only visible at DEBUG level, which is very verbose. At INFO level, you'll see NATS connection and endpoint registration, but not individual cache hits.\n",
-    "\n",
-    "**Option A: Check NATS Events (Recommended)**"
+    "This script monitors the frontend's routing decisions in real-time, showing which worker handles each request and how many cached blocks are reused."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0038a723",
+   "id": "9cf53b48",
    "metadata": {},
    "outputs": [],
    "source": [
     "%%bash\n",
     "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "\n",
-    "# Check NATS for KV cache events being published\n",
-    "echo \"Checking NATS for KV cache event stream...\"\n",
-    "kubectl exec -n nats-system nats-0 -- nats stream ls 2>/dev/null || \\\n",
-    "    echo \"Note: JetStream streams are created on first request\"\n",
-    "\n",
-    "echo \"\"\n",
-    "echo \"After sending requests above, workers publish KV events to NATS\"\n",
-    "echo \"The router uses these events to route requests to workers with cached prefixes\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "32e0ef46",
-   "metadata": {},
-   "source": [
-    "**Option B: Enable Verbose Logging (Optional - Very Verbose)**\n",
-    "\n",
-    "If you want to see detailed cache hit/miss logs, you can patch the deployment:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cb3314d8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "export NAMESPACE=${NAMESPACE:-dynamo}\n",
-    "\n",
-    "# This will make logs VERY verbose - only use for debugging\n",
-    "kubectl set env deployment/vllm-kv-demo-vllmworker \\\n",
-    "  -n $NAMESPACE \\\n",
-    "  VLLM_LOGGING_LEVEL=DEBUG\n",
-    "\n",
-    "echo \"⚠️ Verbose logging enabled - logs will be very detailed\"\n",
-    "echo \"To revert: kubectl set env deployment/vllm-kv-demo-vllmworker -n $NAMESPACE VLLM_LOGGING_LEVEL=INFO\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8228c0f8",
-   "metadata": {},
-   "source": [
-    "**What indicates KV-aware routing is working:**\n",
-    "- NATS connection successful (shown in startup logs)\n",
-    "- Requests with similar prefixes complete faster (TTFT improvement)\n",
-    "- Worker logs show `Registering endpoint` messages (NATS connectivity)\n",
-    "- At DEBUG level: \"GPU KV cache usage\" and block allocation messages\n",
-    "\n",
-    "### Step 3: Demonstrate System Prompt Caching (Best Use Case)\n",
-    "\n",
-    "System prompts are where KV-aware routing provides the most value, since they're:\n",
-    "- Longer (20-50+ tokens vs 3-4 for short queries)\n",
-    "- Identical across many requests (same prefix every time)\n",
-    "- Frequently reused in multi-turn conversations"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42079e46",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
     "export NODE_IP=$(kubectl get nodes -o jsonpath='{.items[0].status.addresses[?(@.type==\"InternalIP\")].address}')\n",
     "\n",
-    "echo \"Testing KV-aware routing with shared system prompt...\"\n",
+    "# Get pod names\n",
+    "FRONTEND=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=Frontend -o jsonpath='{.items[0].metadata.name}')\n",
+    "WORKER1=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker -o jsonpath='{.items[0].metadata.name}')\n",
+    "WORKER2=$(kubectl get pods -n $NAMESPACE -l nvidia.com/dynamo-component=VllmWorker -o jsonpath='{.items[1].metadata.name}')\n",
+    "\n",
+    "echo \"╔════════════════════════════════════════════════════════════════╗\"\n",
+    "echo \"║         KV-Aware Routing Visualization                        ║\"\n",
+    "echo \"╚════════════════════════════════════════════════════════════════╝\"\n",
+    "echo \"\"\n",
+    "echo \"Frontend: $FRONTEND\"\n",
+    "echo \"Worker 1: $WORKER1\"\n",
+    "echo \"Worker 2: $WORKER2\"\n",
     "echo \"\"\n",
     "\n",
-    "# Turn 1\n",
-    "echo \"Turn 1: Initial request (system prompt cached)\"\n",
+    "# Start monitoring frontend routing decisions\n",
+    "kubectl logs -n $NAMESPACE $FRONTEND -f 2>/dev/null | \\\n",
+    "  grep \"Selected worker\" --line-buffered | \\\n",
+    "  awk '{print \"[ROUTING] Worker:\", $(NF-7), \"| Cached blocks:\", $(NF-5)}' &\n",
+    "MONITOR_PID=$!\n",
+    "\n",
+    "sleep 2\n",
+    "\n",
+    "echo \"════════════════════════════════════════════════════════════════\"\n",
+    "echo \"Sending Test Requests\"\n",
+    "echo \"════════════════════════════════════════════════════════════════\"\n",
+    "echo \"\"\n",
+    "\n",
+    "# Request 1 - Physics prefix\n",
+    "echo \"📤 Request 1: Physics tutor + 'What is gravity?'\"\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -d '{\n",
     "    \"model\": \"Qwen/Qwen2.5-1.5B-Instruct\",\n",
     "    \"messages\": [\n",
-    "      {\"role\": \"system\", \"content\": \"You are a helpful AI assistant specialized in physics. Always explain concepts clearly and concisely.\"},\n",
-    "      {\"role\": \"user\", \"content\": \"What is quantum mechanics?\"}\n",
+    "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
+    "      {\"role\": \"user\", \"content\": \"What is gravity?\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 60\n",
-    "  }' | jq -r '.choices[0].message.content'\n",
+    "    \"max_tokens\": 30\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:70]' \n",
     "\n",
+    "sleep 3\n",
+    "\n",
+    "# Request 2 - Same physics prefix\n",
     "echo \"\"\n",
-    "sleep 1\n",
-    "\n",
-    "# Turn 2 - Same system prompt, different question\n",
-    "echo \"Turn 2: New question with same system prompt (router directs to same worker)\"\n",
+    "echo \"📤 Request 2: Physics tutor + 'What is velocity?' (SAME PREFIX)\"\n",
     "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
     "  -H \"Content-Type: application/json\" \\\n",
     "  -d '{\n",
     "    \"model\": \"Qwen/Qwen2.5-1.5B-Instruct\",\n",
     "    \"messages\": [\n",
-    "      {\"role\": \"system\", \"content\": \"You are a helpful AI assistant specialized in physics. Always explain concepts clearly and concisely.\"},\n",
-    "      {\"role\": \"user\", \"content\": \"What is relativity?\"}\n",
+    "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
+    "      {\"role\": \"user\", \"content\": \"What is velocity?\"}\n",
     "    ],\n",
-    "    \"max_tokens\": 60\n",
-    "  }' | jq -r '.choices[0].message.content'\n",
+    "    \"max_tokens\": 30\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "\n",
+    "sleep 3\n",
+    "\n",
+    "# Request 3 - Different prefix\n",
+    "echo \"\"\n",
+    "echo \"📤 Request 3: Math tutor + 'What is algebra?' (DIFFERENT PREFIX)\"\n",
+    "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
+    "  -H \"Content-Type: application/json\" \\\n",
+    "  -d '{\n",
+    "    \"model\": \"Qwen/Qwen2.5-1.5B-Instruct\",\n",
+    "    \"messages\": [\n",
+    "      {\"role\": \"system\", \"content\": \"You are a math tutor.\"},\n",
+    "      {\"role\": \"user\", \"content\": \"What is algebra?\"}\n",
+    "    ],\n",
+    "    \"max_tokens\": 30\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "\n",
+    "sleep 3\n",
+    "\n",
+    "# Request 4 - Back to physics\n",
+    "echo \"\"\n",
+    "echo \"📤 Request 4: Physics tutor + 'Explain momentum' (BACK TO PHYSICS)\"\n",
+    "curl -s http://$NODE_IP:30200/v1/chat/completions \\\n",
+    "  -H \"Content-Type: application/json\" \\\n",
+    "  -d '{\n",
+    "    \"model\": \"Qwen/Qwen2.5-1.5B-Instruct\",\n",
+    "    \"messages\": [\n",
+    "      {\"role\": \"system\", \"content\": \"You are a physics tutor.\"},\n",
+    "      {\"role\": \"user\", \"content\": \"Explain momentum\"}\n",
+    "    ],\n",
+    "    \"max_tokens\": 30\n",
+    "  }' | jq -r '.choices[0].message.content | .[0:70]'\n",
+    "\n",
+    "sleep 2\n",
+    "kill $MONITOR_PID 2>/dev/null\n",
     "\n",
     "echo \"\"\n",
-    "echo \"✓ Both requests used the same system prompt\"\n",
-    "echo \"  System prompt: ~25 tokens (processed once, reused on second request)\"\n",
-    "echo \"  Router directed second request to worker with cached system prompt\"\n",
-    "echo \"\"\n",
-    "echo \"Note: With Qwen 1.5B, timing improvements are still too small to measure,\"\n",
-    "echo \"but the caching mechanism is working (verified via NATS connection above)\""
+    "echo \"════════════════════════════════════════════════════════════════\"\n",
+    "echo \"✓ Check the [ROUTING] lines above:\"\n",
+    "echo \"  - Requests 1, 2, and 4 (physics) should use the same Worker ID\"\n",
+    "echo \"  - Request 3 (math) may use a different Worker ID\"\n",
+    "echo \"  - 'Cached blocks' shows prefix reuse (higher = more cache hits)\"\n",
+    "echo \"════════════════════════════════════════════════════════════════\""
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "e448b963",
+   "id": "173728b0",
    "metadata": {},
    "source": [
-    "### Step 4: Verify Deployment Status"
+    "**Understanding the Output:**\n",
+    "\n",
+    "Look for these key indicators in the `[ROUTING]` lines:\n",
+    "\n",
+    "1. **worker_id** - Unique identifier for each worker pod\n",
+    "   - Same worker_id = request routed to same GPU\n",
+    "   - Different worker_id = request routed to different GPU\n",
+    "\n",
+    "2. **cached blocks** - Number of KV cache blocks reused (**THE KEY METRIC!**)\n",
+    "   - `cached blocks: 0` = No cache hit (cold start or different prefix)\n",
+    "   - `cached blocks: N` (N > 0) = Cache hit! Router reused N blocks from memory\n",
+    "\n",
+    "3. **Routing pattern** - Requests with the same system prompt should route to the same worker\n",
+    "\n",
+    "**Example of successful KV-aware routing:**\n",
+    "```\n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 0     ← First \"physics\" request\n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Second \"physics\" request (CACHE HIT!)\n",
+    "[ROUTING] Worker: 14409932740882684000 | Cached blocks: 0    ← \"Math\" request (different worker)\n",
+    "[ROUTING] Worker: 2575905244297037343 | Cached blocks: 5     ← Back to \"physics\" (same worker, cache hit!)\n",
+    "```\n",
+    "\n",
+    "The router intelligently directs physics requests to worker `257590...` and math requests to worker `144099...`, maximizing cache reuse!\n",
+    "\n",
+    "### Step 3: Verify Deployment Status"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "05ed0706",
+   "id": "54cd634d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -937,7 +951,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5927dc4",
+   "id": "fadbde08",
    "metadata": {},
    "source": [
     "---\n",
@@ -969,7 +983,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3b02a4d",
+   "id": "fdb76cac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +1006,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b9f0062",
+   "id": "e208b24c",
    "metadata": {},
    "source": [
     "### Workers Not Discovered"
@@ -1001,7 +1015,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55972740",
+   "id": "97299ddd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1025,7 +1039,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c51abc7",
+   "id": "856b92cd",
    "metadata": {},
    "source": [
     "### No Requests Reaching Workers"
@@ -1034,7 +1048,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b3a0bc7",
+   "id": "bf3a0b17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1058,7 +1072,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b073e267",
+   "id": "9823a068",
    "metadata": {},
    "source": [
     "### Understanding Cache Sharing with NIXL\n",
@@ -1092,7 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2a227036",
+   "id": "dd40cb50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1109,7 +1123,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce70ff9c",
+   "id": "6eaf404c",
    "metadata": {},
    "source": [
     "### Step 2: Verify Lab 1 Deployment is Still Running\n",
@@ -1120,7 +1134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a0fa73b0",
+   "id": "8b036bde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1145,7 +1159,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d6818661",
+   "id": "3c6efeea",
    "metadata": {},
    "source": [
     "---\n",
@@ -1162,7 +1176,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "150e7834",
+   "id": "2510ea37",
    "metadata": {},
    "source": [
     "### Community Resources\n",
